--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "xp-dom",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "A pack to handle dom",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "module": "dist/index.es.js",
   "repository": "git@github.com:excaliburhan/xp-dom.git",
   "author": "xiaoping <edwardhjp@gmail.com>",
   "license": "MIT",
   "scripts": {
     "prepublishOnly": "npm run build",
     "dev": "rollup -c -w",
-    "build": "rollup -c"
+    "build:umd": "rollup -c",
+    "build:es": "rollup -c rollup.config.es.js",
+    "build": "npm run build:umd && npm run build:es"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
